<resources>
    <string name="app_name">ReBuy</string>
    <string name="text_login">登陆</string>
    <string name="text_sign_up">注册</string>
    <string name="text_account">请输入账号</string>
    <string name="text_password">请输入密码</string>
    <string name="text_re_password">请确认密码</string>
    <string name="text_cancel">取消</string>
    <string name="text_register">注册</string>
    <string name="toast_text_login_success">登陆成功</string>
    <string name="text_under_logo">NEUQ二手交易平台</string>
    <string name="text_welcome">Copyright © 2016 NEUQer团队. All rights reserved</string>
    <string name="text_fragment_btn_look_around">随便逛逛</string>
    <string name="text_fragment_btn_on_sale">有货出手</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
